# movie-recommendation-system

./: .gitattributes  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROJECT_GUIDE.md  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  UPGRADE_SUMMARY.md  backend.tf  build.sh  db.sqlite3  dockerfile.fe  main.py  main.tf  pyproject.toml  render.yaml  requirements.txt  runtime.txt  setup.bat  setup.py  setup.sh
.github/workflows/: cicd.yml  django-docker-cicd  docker-build.yml  docker-deploy.yml  docker-django-cicd.yaml  terraform-cicd.yml  terraform.yml
.terraform/: terraform.tfstate
Kubernetes_files/: beHPA.yaml  deploymentbe.yaml  deploymentfe.yaml  feHPA.yaml  ingress.yaml  ingressClass.yaml  servicebe.yaml
app/templates/: index.html  positive.html
backend/: Dockerfile  Movie_Recommendation_System_Complete_Guide.ipynb  README.md  aws-iam.tf  db.sqlite3  dockerfile.be  manage.py  requirements.txt
backend/.terraform/: terraform.tfstate
backend/movie_recommendation/: settings.py  (+1 more)
frontend/: Dockerfile  default.conf  package.json
hosting/: Procfile  app.py  main.py  requirements.txt
iamTerraform/: aws-iam-users.tf  variables.tf
movie_recommendation/: asgi.py  settings.py  urls.py  wsgi.py
recommender/: urls.py  utils.py  views.py
static/: demo_model.parquet  features.parquet  model.pkl  model_01.parquet  model_02.parquet  model_03.parquet  movie_db.parquet  top_10k_movie_data.parquet  top_2k_movie_data.parquet  top_5k_movie_data.parquet
training/: guide.md  infer.py  train.py
(+36 files in other folders)
