[tool.poetry]
name = "movie-recommandation"
version = "0.1.0"
description = ""
authors = ["inboxpraveen <sendmailtopraveenkumar@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_recommandation"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.3.0"
pandas = "^1.5.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
